Fix ditto clipping aerodactly

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -581,7 +581,7 @@ border-radius:5px;
 .pk-sprite.gyarados {background-position: -256px -2052px;}
 .pk-sprite.lapras {background-position: -640px -2052px;}
 
-.pk-sprite.ditto {background-position: -768px -2052px;}
+.pk-sprite.ditto {background-position: -768px -2050px;}
 .pk-sprite.eevee {background-position: -896px -2052px;}
 .pk-sprite.vaporeon {background-position: -1024px -2052px;}
 .pk-sprite.jolteon {background-position: -1156px -2052px;}
